Handle error coming from spotfire in a cleaner manner.
Align code with spotfire-wrapper (code will be merged later)

--- a/demo/filter.html
+++ b/demo/filter.html
@@ -38,7 +38,7 @@
   <h2>Result:</h2>
   <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com/spotfire/wp" 
     path="Samples/Sales and Marketing" 
-    cust='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
+    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
     filters='[{"dataTableName": "SalesAndMarketing", "dataColumnName": "BCG segmentation", "filterSettings": { "values": ["Dogs", "Stars"]}}]'
     page="Sales Performance"></spotfire-wrapper>
 
