--- a/demo/marking.html
+++ b/demo/marking.html
@@ -36,7 +36,7 @@
   <h2>Result:</h2>
   <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com/spotfire/wp" 
     path="Samples/Sales and Marketing" 
-    cust='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
+    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
     marking-on='{"SalesAndMarketing": [ "Territory", "City", "BCG segmentation"]}'  
     page="0"></spotfire-wrapper>
 
