--- a/demo/cust.html
+++ b/demo/cust.html
@@ -10,7 +10,7 @@
   <a href='./two.html'>Previous demo (Two dashboards)</a>&nbsp;|&nbsp;<a href="./filter.html">Next Demo (Set Filter)</a>
 
 
-  <p>User can customize the dashboard using <code>cust</code> attribute:</p>
+  <p>User can customize the dashboard using <code>customization</code> attribute:</p>
 
 
   <h2>Code:</h2>
@@ -18,14 +18,14 @@
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com/spotfire/wp"
     path="Samples/Sales and Marketing" 
-    <span style='color:red'>cust</span>='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
+    <span style='color:red'>customization</span>='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
     page="0"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
 &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
   </pre>
 
-<code>cust</code> is an object containing theses settings (set to false if not specified): 
+<code>customization</code> is an object containing theses settings (set to false if not specified): 
 <pre>
   "showAbout": true
   "showAnalysisInformationTool": true
@@ -49,7 +49,7 @@
   <h2>Result:</h2>
   <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com/spotfire/wp" 
     path="Samples/Sales and Marketing" 
-    cust='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
+    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
     page="0"></spotfire-wrapper>
 
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
