Upgrade to Spotfire 7.14 (does no longer support previous SF versions)

--- a/demo/cec.html
+++ b/demo/cec.html
@@ -10,7 +10,7 @@
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;spotfire-wrapper 
-  url="http://ec2-54-93-169-187.eu-central-1.compute.amazonaws.com:7373/spotfire/wp"
+  url="http://34.209.200.59:8080"
   path="cec-dashboards/Homepage" 
   page="Homepage - Management"&gt;
 &lt;/spotfire-wrapper&gt;
@@ -19,7 +19,7 @@
 
   <h2>Result:</h2>
   <spotfire-wrapper id="id4"
-    url="http://ec2-54-93-169-187.eu-central-1.compute.amazonaws.com:7373/spotfire/wp" 
+    url="http://34.209.200.59:8080" 
     path="cec-dashboards/Homepage"
     page="Homepage - Management"></spotfire-wrapper>
 
