--- a/demo/filter.html
+++ b/demo/filter.html
@@ -14,7 +14,7 @@
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
-    url="https://spotfire-next.cloud.tibco.com/spotfire/wp"
+    url="https://spotfire-next.cloud.tibco.com"
     path="Samples/Sales and Marketing" 
     <span style='color:red'>filters</span>='[{"dataTableName": "SalesAndMarketing", "dataColumnName": "BCG segmentation", "filterSettings": { "values": ["Dogs", "Stars"]}}]'
     page="Sales Performance"&gt;
@@ -36,7 +36,7 @@
 </pre>
 
   <h2>Result:</h2>
-  <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com/spotfire/wp" 
+  <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com" 
     path="Samples/Sales and Marketing" 
     customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
     filters='[{"dataTableName": "SalesAndMarketing", "dataColumnName": "BCG segmentation", "filterSettings": { "values": ["Dogs", "Stars"]}}]'
