--- a/demo/index.html
+++ b/demo/index.html
@@ -15,16 +15,16 @@
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
     &lt;<span style='color:yellow'>spotfire-wrapper</span>
-    <span style='color:red'>url</span>="https://spotfire-next.cloud.tibco.com/spotfire/wp"
+    <span style='color:red'>url</span>="https://spotfire-next.cloud.tibco.com"
     <span style='color:red'>path</span>="Samples/Sales and Marketing" 
     <span style='color:red'>page</span>="0"&gt;
     &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
     
     &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
     
-    <p><u>Note:</u> An account to access the Spotfire&trade; instance defined in <code>url</code> is required (here : <a href="https://spotfire-next.cloud.tibco.com/spotfire/wp" target="_otherframe">https://spotfire-next.cloud.tibco.com/spotfire/wp</a)</p>
+    <p><u>Note:</u> An account to access the Spotfire&trade; instance defined in <code>url</code> is required (here : <a href="https://spotfire-next.cloud.tibco.com" target="_otherframe">https://spotfire-next.cloud.tibco.com</a)</p>
   <h2>Result:</h2>
-  <spotfire-wrapper url="https://spotfire-next.cloud.tibco.com/spotfire/wp" 
+  <spotfire-wrapper url="https://spotfire-next.cloud.tibco.com" 
     path="Samples/Sales and Marketing" 
     page="0"></spotfire-wrapper>
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
