--- a/demo/two.html
+++ b/demo/two.html
@@ -14,13 +14,13 @@
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
-    url="https://spotfire-next.cloud.tibco.com/spotfire/wp"
+    url="https://spotfire-next.cloud.tibco.com"
     path="<span style='color:pink'>Samples/Sales and Marketing</span>" 
     page="0"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
-    url="https://spotfire-next.cloud.tibco.com/spotfire/wp"
+    url="https://spotfire-next.cloud.tibco.com"
     path="<span style='color:pink'>Samples/Expense Analyzer Dashboard</span>" 
     page="Expense dashboard"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
@@ -28,12 +28,12 @@
 &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <h2>Result:</h2>
-  <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com/spotfire/wp" 
+  <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com" 
     path="Samples/Sales and Marketing" 
     page="0"></spotfire-wrapper>
 
   <spotfire-wrapper 
-    url="https://spotfire-next.cloud.tibco.com/spotfire/wp"
+    url="https://spotfire-next.cloud.tibco.com"
     path="Samples/Expense Analyzer Dashboard" 
     page="Expense dashboard"></spotfire-wrapper>
 
