--- a/demo/cec.html
+++ b/demo/cec.html
@@ -23,7 +23,7 @@
     path="cec-dashboards/Homepage"
     page="Homepage - Management"></spotfire-wrapper>
 
-    <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
+    <script src="./spotfire-wrapper.js" type="text/javascript"></script>
 
 
 <script>
