RWNG-883: add filters in back panel

--- a/demo/cec.html
+++ b/demo/cec.html
@@ -10,7 +10,7 @@
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;spotfire-wrapper 
-  url="http://34.209.200.59:8080"
+  url="http://18.184.15.86"
   path="cec-dashboards/Homepage" 
   page="Homepage - Management"&gt;
 &lt;/spotfire-wrapper&gt;
@@ -18,12 +18,12 @@
 &lt;script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/script&gt;</pre>
 
   <h2>Result:</h2>
-  <spotfire-wrapper id="id4"
-    url="http://34.209.200.59:8080" 
+  <spotfire-wrapper id="id4" sid="f1"
+    url="http://18.184.15.86" 
     path="cec-dashboards/Homepage"
     page="Homepage - Management"></spotfire-wrapper>
 
-    <script src="./spotfire-wrapper.js" type="text/javascript"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
 
 
 <script>
