--- a/demo/filter.html
+++ b/demo/filter.html
@@ -16,7 +16,7 @@
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
     path="Samples/Sales and Marketing" 
-    <span style='color:red'>filters</span>='[{"dataTableName": "SalesAndMarketing", "dataColumnName": "BCG segmentation", "filterSettings": { "values": ["Dogs", "Stars"]}}]'
+    <span style='color:red'>filters</span>='[{"dataTableName": "Supermarket Stock excel - Sheet1", "dataColumnName": "Type", "filterSettings": { "values": ["Beverages", "Meat"]}}]'
     page="Sales Performance"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
@@ -36,10 +36,11 @@
 </pre>
 
   <h2>Result:</h2>
-  <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com" 
+  <spotfire-wrapper id="id1" sid="sid1" 
+    url="https://spotfire-next.cloud.tibco.com" 
     path="Samples/Sales and Marketing" 
     customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
-    filters='[{"dataTableName": "SalesAndMarketing", "dataColumnName": "BCG segmentation", "filterSettings": { "values": ["Dogs", "Stars"]}}]'
+    filters='[{"dataTableName": "Supermarket Stock excel - Sheet1", "dataColumnName": "Type", "filterSettings": { "values": ["Beverages", "Meat"]}}]'
     page="Sales Performance"></spotfire-wrapper>
 
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
