--- a/demo/index.html
+++ b/demo/index.html
@@ -29,8 +29,8 @@
     url="https://spotfire-next.cloud.tibco.com" 
     path="Samples/Sales and Marketing"
     page="0"></spotfire-wrapper>
-  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
-
+  
+  <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
 
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
