--- a/demo/marking.html
+++ b/demo/marking.html
@@ -18,7 +18,7 @@
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
     path="Samples/Sales and Marketing" 
-    <span style='color:red'>marking-on</span>='{"SalesAndMarketing": [ "Territory", "City", "BCG segmentation"]}'  
+    <span style='color:red'>marking-on</span>='{"Supermarket Stock excel - Sheet1": [ "Type", "Jan", "Aug"]}'  
     page="0"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
@@ -34,10 +34,10 @@
 </pre>
 
   <h2>Result:</h2>
-  <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com" 
+  <spotfire-wrapper sid="sid2" id="id1" url="https://spotfire-next.cloud.tibco.com" 
     path="Samples/Sales and Marketing" 
     customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
-    marking-on='{"SalesAndMarketing": [ "Territory", "City", "BCG segmentation"]}'  
+    marking-on='{"Supermarket Stock excel - Sheet1": [ "Type", "Jan", "Aug"]}'  
     page="0"></spotfire-wrapper>
 
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
