--- a/demo/cust.html
+++ b/demo/cust.html
@@ -5,10 +5,16 @@
 </head>
 
 <body>
-  <h1>Demo Spotfire&trade; Wrapper - Customize dashboard</h1>
-
-  <a href='./two.html'>Previous demo (Two dashboards)</a>&nbsp;|&nbsp;<a href="./filter.html">Next Demo (Set Filter)</a>
-
+  <h1>Demo Spotfire&trade; Wrapper - Customize dashboard
+    <select onchange="location=this.value" style='float:right'>
+      <option value="index.html">Basic sample with one dashboard</option>
+      <option value="two.html">With two dashboards</option>
+      <option selected value="cust.html">Customize dashboards</option>
+      <option value="filter.html">Set Filter</option>
+      <option value="marking.html">Get Marking</option>
+      <option value="new.html">Attach new dashboard</option>
+    </select>
+  </h1>
 
   <p>User can customize the dashboard using <code>customization</code> attribute:</p>
 
@@ -25,8 +31,8 @@
 &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
   </pre>
 
-<code>customization</code> is an object containing theses settings (set to false if not specified): 
-<pre>
+  <code>customization</code> is an object containing theses settings (set to false if not specified):
+  <pre>
   "showAbout": true
   "showAnalysisInformationTool": true
   "showAuthor": true
@@ -48,9 +54,9 @@
 
   <h2>Result:</h2>
   <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com" 
-    path="Samples/Sales and Marketing" 
-    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
-    page="0"></spotfire-wrapper>
+                    path="Samples/Sales and Marketing"
+                    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'>
+  </spotfire-wrapper>
 
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
 
