--- a/demo/filter.html
+++ b/demo/filter.html
@@ -5,9 +5,16 @@
 </head>
 
 <body>
-  <h1>Demo Spotfire&trade; Wrapper - Set Filter</h1>
-
-  <a href="./cust.html">Previous Demo (Customize dashboard)</a>&nbsp;|&nbsp;<a href="./marking.html">Next Demo (get Marking)</a>
+  <h1>Demo Spotfire&trade; Wrapper - Set Filter
+    <select onchange="location=this.value" style='float:right'>
+      <option value="index.html">Basic sample with one dashboard</option>
+      <option value="two.html">With two dashboards</option>
+      <option value="cust.html">Customize dashboards</option>
+      <option selected value="filter.html">Set Filter</option>
+      <option value="marking.html">Get Marking</option>
+      <option value="new.html">Attach new dashboard</option>
+    </select>
+  </h1>
 
   <p><code>filters</code> attribute is used to set a filters that will be applied when dashboard opens:</p>
 
@@ -22,8 +29,8 @@
 
 &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
-<code>filters</code>  is an array made of 
-<pre>
+  <code>filters</code> is an array made of
+  <pre>
   [{
     "dataTableName": "<i>&lt;data table name&gt;</i>",
     "dataColumnName": "<i>&lt;data column name&gt;</i>"
@@ -37,16 +44,15 @@
 
   <h2>Result:</h2>
   <spotfire-wrapper id="id1" sid="sid1" 
-    url="https://spotfire-next.cloud.tibco.com" 
-    path="Samples/Sales and Marketing" 
-    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
-    filters='[{"dataTableName": "Supermarket Stock excel - Sheet1", "dataColumnName": "Type", "filterSettings": { "values": ["Beverages", "Meat"]}}]'
-    page="Sales Performance"></spotfire-wrapper>
+                    url="https://spotfire-next.cloud.tibco.com"
+                    path="Samples/Sales and Marketing"
+                    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}' filters='[{"dataTableName": "Supermarket Stock excel - Sheet1", "dataColumnName": "Type", "filterSettings": { "values": ["Beverages", "Meat"]}}]'
+                    page="Sales Performance">
+  </spotfire-wrapper>
 
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
 </body>
-
 </html>
