--- a/demo/two.html
+++ b/demo/two.html
@@ -5,11 +5,19 @@
 </head>
 
 <body>
-  <h1>Demo Spotfire&trade; Wrapper - Two dashboards in same page</h1>
+  <h1>Demo Spotfire&trade; Wrapper - Two dashboards
+    <select onchange="location=this.value" style='float:right'>
+      <option value="index.html">Basic sample with one dashboard</option>
+      <option selected value="two.html">With two dashboards</option>
+      <option value="cust.html">Customize dashboards</option>
+      <option value="filter.html">Set Filter</option>
+      <option value="marking.html">Get Marking</option>
+      <option value="new.html">Attach new dashboard</option>
+    </select>
+  </h1>
 
-  <a a href="./index.html">Previous demo (Basic sample)</a>&nbsp;|&nbsp;<a href="./cust.html">Next demo (Customize dashboard)</a>
-
-  <p>Several dashboards can be inserted. Only one <code>script</code> tag needs to be placed after all <code>spotfire-wrapper</code> tags:</p>
+  <p>Several dashboards can be inserted. Only one <code>script</code> tag needs to be placed after all <code>spotfire-wrapper</code>
+    tags:</p>
 
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
@@ -28,19 +36,16 @@
 &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <h2>Result:</h2>
-  <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com" 
-    path="Samples/Sales and Marketing" 
-    page="0"></spotfire-wrapper>
+  <spotfire-wrapper id="id1" 
+        url="https://spotfire-next.cloud.tibco.com"
+        path="Samples/Sales and Marketing" page="0">
+  </spotfire-wrapper>
 
-  <spotfire-wrapper 
-    url="https://spotfire-next.cloud.tibco.com"
-    path="Samples/Expense Analyzer Dashboard" 
-    page="Expense dashboard"></spotfire-wrapper>
+  <spotfire-wrapper url="https://spotfire-next.cloud.tibco.com" path="Samples/Expense Analyzer Dashboard" page="Expense dashboard"></spotfire-wrapper>
 
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
 </body>
-
 </html>
