Get rid of underscore and angular-2-localstorage to reduce footprint Clean code

--- a/demo/cust.html
+++ b/demo/cust.html
@@ -23,7 +23,7 @@
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
-    path="Samples/Sales and Marketing" 
+    path="Samples/Introduction to Spotfire" 
     <span style='color:red'>customization</span>='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
     page="0"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
