--- a/demo/filter.html
+++ b/demo/filter.html
@@ -22,7 +22,7 @@
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
-    path="Samples/Sales and Marketing" 
+    path="Samples/Introduction to Spotfire" 
     <span style='color:red'>filters</span>='[{"dataTableName": "Supermarket Stock excel - Sheet1", "dataColumnName": "Type", "filterSettings": { "values": ["Beverages", "Meat"]}}]'
     page="Sales Performance"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
@@ -45,7 +45,7 @@
   <h2>Result:</h2>
   <spotfire-wrapper id="id1" sid="sid1" 
                     url="https://spotfire-next.cloud.tibco.com"
-                    path="Samples/Sales and Marketing"
+                    path="Samples/Introduction to Spotfire"
                     customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}' filters='[{"dataTableName": "Supermarket Stock excel - Sheet1", "dataColumnName": "Type", "filterSettings": { "values": ["Beverages", "Meat"]}}]'
                     page="Sales Performance">
   </spotfire-wrapper>
