--- a/demo/two.html
+++ b/demo/two.html
@@ -23,7 +23,7 @@
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
-    path="<span style='color:pink'>Samples/Sales and Marketing</span>" 
+    path="<span style='color:pink'>Samples/Introduction to Spotfire</span>" 
     page="0"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
@@ -36,10 +36,13 @@
 &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <h2>Result:</h2>
-  <spotfire-wrapper id="id1" 
-        url="https://spotfire-next.cloud.tibco.com"
-        path="Samples/Sales and Marketing" page="0">
+  <!--
+
+    <spotfire-wrapper id="id1" 
+    url="https://spotfire-next.cloud.tibco.com"
+    path="Samples/Introduction to Spotfire" page="0">
   </spotfire-wrapper>
+-->
 
   <spotfire-wrapper url="https://spotfire-next.cloud.tibco.com" path="Samples/Expense Analyzer Dashboard" page="Expense dashboard"></spotfire-wrapper>
 
