--- a/demo/cec.html
+++ b/demo/cec.html
@@ -12,7 +12,7 @@
 &lt;spotfire-wrapper 
   url="http://18.184.15.86"
   path="cec-dashboards/Homepage" 
-  page="Homepage - Management"&gt;
+  page="Homepage - Engagement"&gt;
 &lt;/spotfire-wrapper&gt;
 
 &lt;script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/script&gt;</pre>
@@ -21,9 +21,9 @@
   <spotfire-wrapper id="id4" sid="f1"
     url="http://18.184.15.86"
     path="cec-dashboards/Homepage"
-    page="Homepage - Management"></spotfire-wrapper>
+    page="Homepage - Engagement"></spotfire-wrapper>
 
-  <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
 
   <script>
     const spotfireWrapper = document.getElementById("id4");
