--- a/demo/index.html
+++ b/demo/index.html
@@ -24,7 +24,7 @@
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
     &lt;<span style='color:yellow'>spotfire-wrapper</span>
     <span style='color:red'>url</span>="https://spotfire-next.cloud.tibco.com"
-    <span style='color:red'>path</span>="Samples/Sales and Marketing" 
+    <span style='color:red'>path</span>="Samples/Introduction to Spotfire" 
     &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
     
     &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
@@ -34,7 +34,7 @@
   <h2>Result:</h2>
   <spotfire-wrapper 
     url="https://spotfire-next.cloud.tibco.com" 
-    path="Samples/Sales and Marketing"></spotfire-wrapper>
+    path="Samples/Introduction to Spotfire"></spotfire-wrapper>
 
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
 
