--- a/demo/marking.html
+++ b/demo/marking.html
@@ -25,9 +25,8 @@
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
-    path="Samples/Sales and Marketing" 
-    <span style='color:red'>marking-on</span>='{"Supermarket Stock excel - Sheet1": [ "Type", "Jan", "Aug"]}'  
-    page="0"&gt;
+    path="Samples/Introduction to Spotfire" 
+    <span style='color:red'>marking-on</span>='{"Supermarket Stock excel - Sheet1": [ "Type", "Jan", "Aug"]}' &gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
 &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
@@ -50,10 +49,11 @@
   <h2>Result:</h2>
 
   <spotfire-wrapper sid="sid2" id="id1" 
-                    url="https://spotfire-next.cloud.tibco.com"
-                    path="Samples/Sales and Marketing"
-                    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}' marking-on='{"Supermarket Stock excel - Sheet1": [ "Type", "Jan", "Aug"]}'
-                    page="0"></spotfire-wrapper>
+                    url="https://spotfire-next.cloud.tibco.com" 
+                    path="Samples/Introduction to Spotfire"
+                    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}' 
+                    marking-on='{"Supermarket Stock excel - Sheet1": [ "Type", "Jan", "Aug" ]}'
+                    ></spotfire-wrapper>
 
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
 
@@ -72,4 +72,5 @@
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
 </body>
+
 </html>
