SpotfireWrapper: Save url if modified

--- a/demo/new.html
+++ b/demo/new.html
@@ -29,7 +29,7 @@
        href="https://spotfire-next.cloud.tibco.com" target="_otherframe">https://spotfire-next.cloud.tibco.com</a></p>
   <h2>Result:</h2>
 
-  <spotfire-wrapper></spotfire-wrapper>
+  <spotfire-wrapper sid="d1"></spotfire-wrapper>
 
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
 
