--- a/demo/two.html
+++ b/demo/two.html
@@ -23,8 +23,7 @@
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
-    path="<span style='color:pink'>Samples/Introduction to Spotfire</span>" 
-    page="0"&gt;
+    path="<span style='color:pink'>Samples/Introduction to Spotfire</span>"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
@@ -36,14 +35,11 @@
 &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <h2>Result:</h2>
-  <!--
-
     <spotfire-wrapper id="id1" 
     url="https://spotfire-next.cloud.tibco.com"
-    path="Samples/Introduction to Spotfire" page="0">
+    path="Samples/Introduction to Spotfire">
   </spotfire-wrapper>
--->
-
+  <br><br>
   <spotfire-wrapper url="https://spotfire-next.cloud.tibco.com" path="Samples/Expense Analyzer Dashboard" page="Expense dashboard"></spotfire-wrapper>
 
   <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
