Update samples to point to valid dashboards

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,18 +25,20 @@
     &lt;<span style='color:yellow'>spotfire-wrapper</span>
     <span style='color:red'>url</span>="https://spotfire-next.cloud.tibco.com"
     <span style='color:red'>path</span>="Samples/Introduction to Spotfire" 
+    <span style='color:red'>page</span>="Example dashboard" 
     &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
     
-    &lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
+    &lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <p><u>Note:</u> An account to access the Spotfire&trade; instance defined in <code>url</code> is required (here : <a
        href="https://spotfire-next.cloud.tibco.com" target="_otherframe">https://spotfire-next.cloud.tibco.com</a></p>
   <h2>Result:</h2>
   <spotfire-wrapper 
     url="https://spotfire-next.cloud.tibco.com" 
-    path="Samples/Introduction to Spotfire"></spotfire-wrapper>
+    path="Samples/Introduction to Spotfire"
+    page="Example dashboard"></spotfire-wrapper>
 
-  <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
+  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
 
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
