--- a/demo/cust.html
+++ b/demo/cust.html
@@ -23,12 +23,12 @@
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
-    path="Samples/Introduction to Spotfire" 
+    path="Samples/Sales and Marketing"
     <span style='color:red'>customization</span>='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
     page="0"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
-&lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
+&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
   </pre>
 
   <code>customization</code> is an object containing theses settings (set to false if not specified):
@@ -55,10 +55,11 @@
   <h2>Result:</h2>
   <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com" 
                     path="Samples/Sales and Marketing"
-                    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'>
+                    page="Sales performance"
+                    customization='{"showAuthor":true, "showFilterPanel":true, "showStatusBar":true, "showToolBar":true}'>
   </spotfire-wrapper>
 
-  <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
+  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
