--- a/demo/filter.html
+++ b/demo/filter.html
@@ -23,11 +23,11 @@
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
     path="Samples/Introduction to Spotfire" 
-    <span style='color:red'>filters</span>='[{"dataTableName": "Supermarket Stock excel - Sheet1", "dataColumnName": "Type", "filterSettings": { "values": ["Beverages", "Meat"]}}]'
-    page="Sales Performance"&gt;
+    page="Sales Performance"
+    <span style='color:red'>filters</span>='[{"dataTableName": "SalesAndMarketing", "dataColumnName": "State", "filterSettings": { "values": ["California", "Arizona"]}}]'&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
-&lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
+&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <code>filters</code> is an array made of
   <pre>
@@ -45,12 +45,13 @@
   <h2>Result:</h2>
   <spotfire-wrapper id="id1" sid="sid1" 
                     url="https://spotfire-next.cloud.tibco.com"
-                    path="Samples/Introduction to Spotfire"
-                    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}' filters='[{"dataTableName": "Supermarket Stock excel - Sheet1", "dataColumnName": "Type", "filterSettings": { "values": ["Beverages", "Meat"]}}]'
-                    page="Sales Performance">
+                    path="Samples/Sales and Marketing"
+                    page="Sales Performance"
+                    customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}' 
+                    filters='[{"dataTableName": "SalesAndMarketing", "dataColumnName": "State", "filterSettings": { "values": ["California", "Arizona"]}}]'></spotfire-wrapper>
   </spotfire-wrapper>
 
-  <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
+  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
