--- a/demo/two.html
+++ b/demo/two.html
@@ -23,26 +23,28 @@
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
-    path="<span style='color:pink'>Samples/Introduction to Spotfire</span>"&gt;
+    path="<span style='color:pink'>Sample Data Functions/MATLAB/MATLAB_Correlation_Cars</span>"&gt;
+    page="<span style='color:pink'></span>The Analysis</span>"
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
 &lt;<span style='color:yellow'>spotfire-wrapper</span>
     url="https://spotfire-next.cloud.tibco.com"
     path="<span style='color:pink'>Samples/Expense Analyzer Dashboard</span>" 
-    page="Expense dashboard"&gt;
+    page="<span style='color:pink'></span>Expense dashboard</span>"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
-&lt;<span style='color:yellow'>script</span> src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
+&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <h2>Result:</h2>
     <spotfire-wrapper id="id1" 
     url="https://spotfire-next.cloud.tibco.com"
-    path="Samples/Introduction to Spotfire">
+    path="Sample Data Functions/MATLAB/MATLAB_Correlation_Cars"
+    page="The Analysis">
   </spotfire-wrapper>
   <br><br>
   <spotfire-wrapper url="https://spotfire-next.cloud.tibco.com" path="Samples/Expense Analyzer Dashboard" page="Expense dashboard"></spotfire-wrapper>
 
-  <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js" type="text/javascript"></script>
+  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
