Import spotfire-webplayer NPM package and spotfire-wrapper lib from S3

--- a/src_container/index.html
+++ b/src_container/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Container</title>
-  <script src="http://localhost:4404/spotfire-wrapper.js"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/cec-library/spotfire-wrapper.js"></script>
 </head>
 <body>
   <app-root></app-root>
