Clean html code

--- a/demo/cec.html
+++ b/demo/cec.html
@@ -15,7 +15,7 @@
   page="Homepage - Engagement"&gt;
 &lt;/spotfire-wrapper&gt;
 
-&lt;script src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/script&gt;</pre>
+&lt;script src="./spotfire-wrapper.js" &gt;&lt;/script&gt;</pre>
 
   <h2>Result:</h2>
   <spotfire-wrapper id="id4" sid="f1"
@@ -23,7 +23,7 @@
     path="cec-dashboards/Homepage"
     page="Homepage - Engagement"></spotfire-wrapper>
 
-    <script src="./spotfire-wrapper.js" type="text/javascript"></script>
+    <script src="./spotfire-wrapper.js"></script>
 
   <script>
     const spotfireWrapper = document.getElementById("id4");
