--- a/demo/marking.html
+++ b/demo/marking.html
@@ -30,7 +30,7 @@
     <span style='color:red'>marking-on</span>='{"SalesAndMarketing": [ "BCG segmentation", "State"]}' &gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
-&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
+&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" &gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <div style='float:left; width:50%'>
     <code>marking-on</code> attribute lists, for each table, the column names that will be used by the marking
@@ -57,7 +57,7 @@
                     marking-on='{"SalesAndMarketing": [ "BCG segmentation", "State" ]}'
                     ></spotfire-wrapper>
 
-  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
+  <script src="./spotfire-wrapper.js"></script>
 
   <script>
     const spotfireWrapper = document.getElementById("id1");
