--- a/demo/new.html
+++ b/demo/new.html
@@ -23,7 +23,7 @@
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
     &lt;<span style='color:yellow'>spotfire-wrapper</span>&lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
     
-    &lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
+    &lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" &gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <p><u>Note:</u> An account to access the Spotfire&trade; instance defined in <code>url</code> is required (here : <a
        href="https://spotfire-next.cloud.tibco.com" target="_otherframe">https://spotfire-next.cloud.tibco.com</a></p>
@@ -31,7 +31,7 @@
 
   <spotfire-wrapper sid="d1"></spotfire-wrapper>
 
-  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
+  <script src="./spotfire-wrapper.js"></script>
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
