--- a/demo/cust.html
+++ b/demo/cust.html
@@ -28,7 +28,7 @@
     page="0"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
-&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
+&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" &gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
   </pre>
 
   <code>customization</code> is an object containing theses settings (set to false if not specified):
@@ -59,7 +59,7 @@
                     customization='{"showAuthor":true, "showFilterPanel":true, "showStatusBar":true, "showToolBar":true}'>
   </spotfire-wrapper>
 
-  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
+  <script src="./spotfire-wrapper.js"></script>
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
