--- a/demo/filter.html
+++ b/demo/filter.html
@@ -27,7 +27,7 @@
     <span style='color:red'>filters</span>='[{"dataTableName": "SalesAndMarketing", "dataColumnName": "State", "filterSettings": { "values": ["California", "Arizona"]}}]'&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
-&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
+&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" &gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <code>filters</code> is an array made of
   <pre>
@@ -51,7 +51,7 @@
                     filters='[{"dataTableName": "SalesAndMarketing", "dataColumnName": "State", "filterSettings": { "values": ["California", "Arizona"]}}]'></spotfire-wrapper>
   </spotfire-wrapper>
 
-  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
+  <script src="./spotfire-wrapper.js"></script>
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
