--- a/demo/index.html
+++ b/demo/index.html
@@ -28,7 +28,7 @@
     <span style='color:red'>page</span>="Example dashboard" 
     &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
     
-    &lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
+    &lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" &gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <p><u>Note:</u> An account to access the Spotfire&trade; instance defined in <code>url</code> is required (here : <a
        href="https://spotfire-next.cloud.tibco.com" target="_otherframe">https://spotfire-next.cloud.tibco.com</a></p>
@@ -38,7 +38,7 @@
     path="Samples/Introduction to Spotfire"
     page="Example dashboard"></spotfire-wrapper>
 
-  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
+  <script src="./spotfire-wrapper.js"></script>
 
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
