--- a/demo/two.html
+++ b/demo/two.html
@@ -33,7 +33,7 @@
     page="<span style='color:pink'></span>Expense dashboard</span>"&gt;
 &lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
 
-&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" type="text/javascript"&gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
+&lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" &gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
   <h2>Result:</h2>
     <spotfire-wrapper id="id1" 
@@ -44,7 +44,7 @@
   <br><br>
   <spotfire-wrapper url="https://spotfire-next.cloud.tibco.com" path="Samples/Expense Analyzer Dashboard" page="Expense dashboard"></spotfire-wrapper>
 
-  <script src="./spotfire-wrapper.js" type="text/javascript"></script>
+  <script src="./spotfire-wrapper.js"></script>
 
   <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
