Change names of HTML tags to spotfire-viewer and spotfire-editor Updated demos

--- a/demo/cec.html
+++ b/demo/cec.html
@@ -9,19 +9,19 @@
 
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
-&lt;spotfire-wrapper 
+&lt;spotfire-editor 
   url="http://18.184.15.86"
   path="cec-dashboards/Homepage" 
   page="Homepage - Engagement"&gt;
-&lt;/spotfire-wrapper&gt;
+&lt;/spotfire-editor&gt;
 
 &lt;script src="./spotfire-wrapper.js" &gt;&lt;/script&gt;</pre>
 
   <h2>Result:</h2>
-  <spotfire-wrapper id="id4" sid="f1"
+  <spotfire-editor id="id4" sid="f1"
     url="http://18.184.15.86"
     path="cec-dashboards/Homepage"
-    page="Homepage - Engagement"></spotfire-wrapper>
+    page="Homepage - Engagement"></spotfire-editor>
 
     <script src="./spotfire-wrapper.js"></script>
 
