--- a/demo/cust.html
+++ b/demo/cust.html
@@ -21,12 +21,12 @@
 
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
-&lt;<span style='color:yellow'>spotfire-wrapper</span>
+&lt;<span style='color:yellow'>spotfire-editor</span>
     url="https://spotfire-next.cloud.tibco.com"
     path="Samples/Sales and Marketing"
     <span style='color:red'>customization</span>='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}'
     page="0"&gt;
-&lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
+&lt;/<span style='color:yellow'>spotfire-editor</span>&gt;
 
 &lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" &gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
   </pre>
@@ -53,11 +53,11 @@
 </pre>
 
   <h2>Result:</h2>
-  <spotfire-wrapper id="id1" url="https://spotfire-next.cloud.tibco.com" 
+  <spotfire-editor id="id1" url="https://spotfire-next.cloud.tibco.com" 
                     path="Samples/Sales and Marketing"
                     page="Sales performance"
                     customization='{"showAuthor":true, "showFilterPanel":true, "showStatusBar":true, "showToolBar":true}'>
-  </spotfire-wrapper>
+  </spotfire-editor>
 
   <script src="./spotfire-wrapper.js"></script>
 
