--- a/demo/new.html
+++ b/demo/new.html
@@ -16,12 +16,12 @@
     </select>
   </h1>
 
-  <p><b>spotfire-wrapper</b> is a static JavaScript library that provides a new HTML tag : <code>&lt;spotfire-wrapper&gt;</code></p>
+  <p><b>spotfire-wrapper</b> is a static JavaScript library that provides a new HTML tag : <code>&lt;spotfire-editor&gt;</code></p>
 
   <p>To insert a spotfire dashboard into a web page, user needs to add the following HTML code:</p>
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
-    &lt;<span style='color:yellow'>spotfire-wrapper</span>&lt;/<span style='color:yellow'>spotfire-wrapper</span>&gt;
+    &lt;<span style='color:yellow'>spotfire-editor</span>&lt;/<span style='color:yellow'>spotfire-editor</span>&gt;
     
     &lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" &gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
@@ -29,7 +29,7 @@
        href="https://spotfire-next.cloud.tibco.com" target="_otherframe">https://spotfire-next.cloud.tibco.com</a></p>
   <h2>Result:</h2>
 
-  <spotfire-wrapper sid="d1"></spotfire-wrapper>
+  <spotfire-editor sid="d1"></spotfire-editor>
 
   <script src="./spotfire-wrapper.js"></script>
 
