Register to marking when page is ready

--- a/demo/marking.html
+++ b/demo/marking.html
@@ -23,12 +23,12 @@
 
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
-&lt;<span style='color:yellow'>spotfire-editor</span>
+&lt;<span style='color:yellow'>spotfire-viewer</span>
     url="https://spotfire-next.cloud.tibco.com"
     path="Samples/Sales and Marketing" 
     page="Effect of promotions"
     <span style='color:red'>marking-on</span>='{"SalesAndMarketing": [ "BCG segmentation", "State"]}' &gt;
-&lt;/<span style='color:yellow'>spotfire-editor</span>&gt;
+&lt;/<span style='color:yellow'>spotfire-viewer</span>&gt;
 
 &lt;<span style='color:yellow'>script</span> src="./spotfire-wrapper.js" &gt;&lt;/<span style='color:yellow'>script</span>&gt;</pre>
 
@@ -49,23 +49,23 @@
   <div style='clear:both'></div>
   <h2>Result:</h2>
 
-  <spotfire-editor sid="sid2" id="id1" 
+  <spotfire-viewer sid="sid2" id="id1" 
                     url="https://spotfire-next.cloud.tibco.com" 
                     path="Samples/Sales and Marketing"
                     page="Effect of promotions"
                     customization='{"showAuthor":true, "showFilterPanel":true, "showToolBar":true}' 
                     marking-on='{"SalesAndMarketing": [ "BCG segmentation", "State" ]}'
-                    ></spotfire-editor>
+                    ></spotfire-viewer>
 
   <script src="./spotfire-wrapper.js"></script>
 
   <script>
     const spotfireWrapper = document.getElementById("id1");
-    const result = document.getElementById("marker1");
     // listen to the filteringEvent
     spotfireWrapper.addEventListener('filteringEvent', event => console.log('[HTML] filteringEvent!', event.detail));
     // listen to the markingEvent
     spotfireWrapper.addEventListener('markingEvent', event => {
+      const result = document.getElementById("marker1");
       result.innerHTML = JSON.stringify(event.detail, null, '   ');
       console.log('[HTML] markingEvent!', event.detail);
     });
