Added spotfire-editor and spotfire-viewer as selector Added new demo

--- a/demo2/index.html
+++ b/demo2/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Container</title>
+  <title>Demo 2</title>
 </head>
 <body>
   <app-root></app-root>
