Added code documentation Upgrade to Angular  7.2.15 Added a raw sample (only HTML code that is needed to display a dashboard)

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,7 @@
   <h1>Demo Spotfire&trade; Wrapper - Basic sample
     <select onchange="location=this.value" style='float:right'>
       <option selected value="index.html">Basic sample with one dashboard</option>
+      <option value="rawindex.html">Raw sample (minimum HTML code)</option>
       <option value="two.html">With two dashboards</option>
       <option value="cust.html">Customize dashboards</option>
       <option value="filter.html">Set Filter</option>
