Add licence header in files Bump version to 0.6.0

--- a/demo1/index.html
+++ b/demo1/index.html
@@ -1,4 +1,10 @@
 <!doctype html>
+<!--
+  Copyright (c) 2019. TIBCO Software Inc.
+  This file is subject to the license terms contained
+  in the license file that is distributed with this file.
+-->
+
 <html lang="en">
 <head>
   <title>Demo 1</title>
