--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,8 @@
+<!--
+  Copyright (c) 2019. TIBCO Software Inc.
+  This file is subject to the license terms contained
+  in the license file that is distributed with this file.
+-->
 <spotfire-wrapper
 url="http://34.209.200.59:8080"
 path="cec-dashboards/Homepage" 
