--- a/demo/marking.html
+++ b/demo/marking.html
@@ -1,4 +1,9 @@
 <html lang="en">
+<!--
+  Copyright (c) 2019. TIBCO Software Inc.
+  This file is subject to the license terms contained
+  in the license file that is distributed with this file.
+-->
 
 <head>
   <title>Demo Spotfire Wrapper - Samples</title>
