Update code, Readmes and delivery build next to Legal review

--- a/demo/cec.html
+++ b/demo/cec.html
@@ -6,11 +6,11 @@
 -->
 
 <head>
-  <title>Demo Spotfire Wrapper</title>
+  <title>Demo Wrapper for TIBCO Spotfire(R)</title>
 </head>
 
 <body>
-  <h1>Demo Spotfire Wrapper</h1>
+  <h1>Demo Wrapper for TIBCO Spotfire(R)</h1>
 
   <h2>Code:</h2>
   <pre style='border:2px dashed green; background-color:black; color:white; padding:20px;'>
