--- a/demo/cust.html
+++ b/demo/cust.html
@@ -6,11 +6,11 @@
 -->
 
 <head>
-  <title>Demo Spotfire Wrapper - sample</title>
+  <title>Demo Wrapper for TIBCO Spotfire(R) - sample</title>
 </head>
 
 <body>
-  <h1>Demo Spotfire&trade; Wrapper - Customize dashboard
+  <h1>Demo Wrapper for TIBCO Spotfire&trade; - Customize dashboard
     <select onchange="location=this.value" style='float:right'>
       <option value="index.html">Basic sample with one dashboard</option>
       <option value="two.html">With two dashboards</option>
@@ -63,8 +63,6 @@
   </spotfire-editor>
 
   <script src="./spotfire-wrapper.js"></script>
-
-  <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
 </body>
 </html>
