--- a/demo/filter.html
+++ b/demo/filter.html
@@ -6,11 +6,11 @@
 -->
 
 <head>
-  <title>Demo Spotfire Wrapper - samples</title>
+  <title>Demo Wrapper for TIBCO Spotfire(R) - samples</title>
 </head>
 
 <body>
-  <h1>Demo Spotfire&trade; Wrapper - Set Filter
+  <h1>Demo Wrapper for TIBCO Spotfire&trade; - Set Filter
     <select onchange="location=this.value" style='float:right'>
       <option value="index.html">Basic sample with one dashboard</option>
       <option value="two.html">With two dashboards</option>
@@ -57,8 +57,6 @@
   </spotfire-viewer>
 
   <script src="./spotfire-wrapper.js"></script>
-
-  <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
 </body>
 </html>
