--- a/demo/marking.html
+++ b/demo/marking.html
@@ -6,11 +6,11 @@
 -->
 
 <head>
-  <title>Demo Spotfire Wrapper - Samples</title>
+  <title>Demo Wrapper for TIBCO Spotfire(R) - Samples</title>
 </head>
 
 <body>
-  <h1>Demo Spotfire&trade; Wrapper - Get Marking
+  <h1>Demo Wrapper for TIBCO Spotfire&trade; - Get Marking
     <select onchange="location=this.value" style='float:right'>
       <option value="index.html">Basic sample with one dashboard</option>
       <option value="two.html">With two dashboards</option>
@@ -75,8 +75,6 @@
       console.log('[HTML] markingEvent!', event.detail);
     });
   </script>
-
-  <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
 </body>
 
