--- a/demo/new.html
+++ b/demo/new.html
@@ -6,11 +6,11 @@
 -->
 
 <head>
-  <title>Demo Spotfire Wrapper - Samples</title>
+  <title>Demo Wrapper for TIBCO Spotfire(R) - Samples</title>
 </head>
 
 <body>
-  <h1>Demo Spotfire&trade; Wrapper - Attach a new dashboard
+  <h1>Demo Wrapper for TIBCO Spotfire&trade; - Attach a new dashboard
     <select onchange="location=this.value" style='float:right'>
       <option selected value="index.html">Basic sample with one dashboard</option>
       <option value="two.html">With two dashboards</option>
@@ -37,8 +37,6 @@
   <spotfire-editor sid="d1"></spotfire-editor>
 
   <script src="./spotfire-wrapper.js"></script>
-
-  <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
 </body>
 </html>
