--- a/demo/rawindex.html
+++ b/demo/rawindex.html
@@ -6,7 +6,7 @@
 -->
 
 <head>
-  <title>Demo Spotfire Wrapper - Raw Sample</title>
+  <title>Demo Wrapper for TIBCO Spotfire(R) - Raw Sample</title>
 </head>
 <body>
   <spotfire-viewer 
