--- a/demo/index.html
+++ b/demo/index.html
@@ -6,11 +6,11 @@
 -->
 
 <head>
-  <title>Demo Spotfire Wrapper - Samples</title>
+  <title>Demo Wrapper for TIBCO Spotfire(R) - Samples</title>
 </head>
 
 <body>
-  <h1>Demo Spotfire&trade; Wrapper - Basic sample
+  <h1>Demo Wrapper for TIBCO Spotfire&trade; - Basic sample
     <select onchange="location=this.value" style='float:right'>
       <option selected value="index.html">Basic sample with one dashboard</option>
       <option value="rawindex.html">Raw sample (minimum HTML code)</option>
@@ -49,9 +49,6 @@
     page="Example dashboard"></spotfire-viewer>
 
   <script src="./spotfire-wrapper.js"></script>
-
-
-  <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
 </body>
 </html>
