--- a/demo/two.html
+++ b/demo/two.html
@@ -6,11 +6,11 @@
 -->
 
 <head>
-  <title>Demo Spotfire Wrapper - Samples</title>
+  <title>Demo Wrapper for TIBCO Spotfire(R) - Samples</title>
 </head>
 
 <body>
-  <h1>Demo Spotfire&trade; Wrapper - Two dashboards
+  <h1>Demo Wrapper for TIBCO Spotfire&trade; - Two dashboards
     <select onchange="location=this.value" style='float:right'>
       <option value="index.html">Basic sample with one dashboard</option>
       <option selected value="two.html">With two dashboards</option>
@@ -56,8 +56,6 @@
   </spotfire-editor>
 
   <script src="./spotfire-wrapper.js"></script>
-
-  <a href='mailto:nderoche@tibco.com?subject=About%20spotfire-wrapper' target="_mailFrame">Contact : Nicolas Deroche</a>
 
 </body>
 
